Download: Updated the relax source code information for SourceForge and git.

--- a/download.html
+++ b/download.html
@@ -325,19 +325,13 @@
 <div id="Source_code_repository" class="main_box">
     <h1>Source code repository</h1>
 
-    <p><b>Note:  The information in this section is out of date due to the Gna! shutdown.  It will be updated once a full migration to new infrastructure has taken place.</b></p>
+    <p>The most up-to-date code can be obtained from the relax <a href="https://sourceforge.net/projects/nmr-relax/" title="The relax git source code repository.">source code repository</a> using one of the following commands (which involve the program <a href="https://git-scm.com/">git</a>):</p>
 
-    <p>The most up-to-date code can be obtained from <a href="http://gna.org/svn/?group=relax" title="The relax subversion repository.">Source code repository</a> using one of the following commands (which involve the program <a href="http://subversion.tigris.org/">Subversion</a>):</p>
+    <p><em>> git clone git://git.code.sf.net/p/nmr-relax/code relax</em></p>
 
-    <p><em>> svn co svn://svn.gna.org/svn/relax/trunk ./relax-trunk</em></p>
+    <p>The code obtained from the repository is the most up-to-date (and sometimes evolves quite rapidly). To keep up with changes, the <a href="https://git-scm.com/">git</a> update command must be used:</p>
 
-    <p>or:</p>
-
-    <p><em>> svn co http://svn.gna.org/svn/relax/trunk ./relax-trunk</em></p>
-
-    <p>The code obtained from the repository is the most up-to-date (and sometimes evolves quite rapidly). To keep up with changes, the <a href="http://subversion.tigris.org/">Subversion</a> update command must be used:</p>
-
-    <p><em>> svn up</em></p>
+    <p><em>> git pull</em></p>
 
     <p>Keep in mind that since this code changes often, it could sometimes be unstable and non functional.</p>
 
