--- a/links.html
+++ b/links.html
@@ -37,10 +37,11 @@
     <ul>
     <li><a href="links.html#relax_infrastructure">relax infrastructure</a>
      <ul>
-      <li><a href="links.html#Gna">Gna!</a></li>
       <li><a href="links.html#SourceForge">SourceForge</a></li>
-      <li><a href="links.html#GitLab">GitLab</a></li>
+      <li><a href="links.html#Gna">Gna!</a></li>
+      <li><a href="links.html#Bitbucket">Bitbucket</a></li>
       <li><a href="links.html#GitHub">GitHub</a></li>
+      <li><a href="links.html#GitLab">GitLab</a></li>
      </ul>
     </li>
     <li><a href="links.html#Mailing_list_archives">Mailing list archives</a>
@@ -87,28 +88,34 @@
       <td><strong>Links</strong></td>
     </tr>
 
-    <tr id="Gna" class="link_tr">
-      <td class="link_logo_td"><a href="https://web.archive.org/web/https://gna.org/projects/relax"><img src="images/gnalogo.png" alt="Gna! logo" class="image"/></a></td>
-      <td>Gna! was a central point for the development, distribution and maintenance of Libre Software (Free Software) projects.</td>
-      <td>Prior to the Gna! shutdown, the relax project page used to be at <a href="https://web.archive.org/web/20170305175246/https://gna.org/projects/relax">https://gna.org/projects/relax</a>.  The relax developer Gna! pages were (in alphabetical order):  <a href="https://web.archive.org/web/20170301012510/https://gna.org/users/bugman">Edward d&#39;Auvergne</a>, <a href="https://web.archive.org/web/20170301012516/https://gna.org/users/michaelbieri">Michael Bieri</a>, <a href="https://web.archive.org/web/20170305173814/http://gna.org/users/tlinnet">Troels Linnet</a>, <a href="https://web.archive.org/web/20170301004013/https://gna.org/users/macraild">Chris MacRaild</a>, <a href="https://web.archive.org/web/20170301012404/https://gna.org/users/semor">S&#233;bastien Morin</a>, <a href="https://web.archive.org/web/20170301010933/https://gna.org/users/pansapiens">Andrew Perry</a>, <a href="https://web.archive.org/web/20170301021354/https://gna.org/users/han87">Han Sun</a>, <a href="https://web.archive.org/web/20170301004459/https://gna.org/users/varioustoxins">Gary Thompson</a>.</td>
-    </tr>
-
     <tr id="SourceForge" class="link_tr">
       <td class="link_logo_td"><a href="https://sourceforge.net/projects/nmr-relax"><img src="images/sf_logo.png" alt="SourceForege logo" class="image"/></a></td>
       <td>SourceForge is an Open Source community resource dedicated to helping open source projects be as successful as possible.</td>
-      <td>This is a backup infrastructure site.  The relax project page is <a href="https://sourceforge.net/projects/nmr-relax">https://sourceforge.net/projects/nmr-relax</a>.</td>
+      <td>This is the primary relax infrastructure site.  The relax project page is <a href="https://sourceforge.net/projects/nmr-relax">https://sourceforge.net/projects/nmr-relax</a>.</td>
     </tr>
 
-    <tr id="GitLab" class="link_tr">
-      <td class="link_logo_td"><a href="https://gitlab.com/nmr-relax"><img src="images/gl_logo.png" alt="GitLab logo" class="image"/></a></td>
+    <tr id="Gna" class="link_tr">
+      <td class="link_logo_td"><a href="https://web.archive.org/web/https://gna.org/projects/relax"><img src="images/gnalogo.png" alt="Gna! logo" class="image"/></a></td>
+      <td>Gna! was a central point for the development, distribution and maintenance of Libre Software (Free Software) projects.</td>
+      <td>Prior to the Gna! shutdown, this used to the primary relax infrastructure site.  The archived relax project page is <a href="https://web.archive.org/web/20170305175246/https://gna.org/projects/relax">https://gna.org/projects/relax</a>.  The archived relax developer Gna! pages were (in alphabetical order):  <a href="https://web.archive.org/web/20170301012510/https://gna.org/users/bugman">Edward d&#39;Auvergne</a>, <a href="https://web.archive.org/web/20170301012516/https://gna.org/users/michaelbieri">Michael Bieri</a>, <a href="https://web.archive.org/web/20170305173814/http://gna.org/users/tlinnet">Troels Linnet</a>, <a href="https://web.archive.org/web/20170301004013/https://gna.org/users/macraild">Chris MacRaild</a>, <a href="https://web.archive.org/web/20170301012404/https://gna.org/users/semor">S&#233;bastien Morin</a>, <a href="https://web.archive.org/web/20170301010933/https://gna.org/users/pansapiens">Andrew Perry</a>, <a href="https://web.archive.org/web/20170301021354/https://gna.org/users/han87">Han Sun</a>, <a href="https://web.archive.org/web/20170301004459/https://gna.org/users/varioustoxins">Gary Thompson</a>.</td>
+    </tr>
+
+    <tr id="Bitbucket" class="link_tr">
+      <td class="link_logo_td"><a href="https://bitbucket.org/nmr-relax"><img src="images/bb_logo.png" alt="Bitbucket logo" class="image"/></a></td>
       <td>Open source software to collaborate on code.</td>
-      <td>This is a backup infrastructure site.  The relax project page is <a href="https://gitlab.com/nmr-relax">https://gitlab.com/nmr-relax</a>.</td>
+      <td>This is a mirror infrastructure site.  The relax project page is <a href="https://bitbucket.org/nmr-relax">https://bitbucket.org/nmr-relax</a>.</td>
     </tr>
 
     <tr id="GitHub" class="link_tr">
       <td class="link_logo_td"><a href="https://github.com/nmr-relax"><img src="images/gh_logo.png" alt="GitHub logo" class="image"/></a></td>
       <td>GitHub is how people build software.</td>
-      <td>This is a backup infrastructure site.  The relax project page is <a href="https://github.com/nmr-relax">https://github.com/nmr-relax</a>.</td>
+      <td>This is a mirror infrastructure site.  The relax project page is <a href="https://github.com/nmr-relax">https://github.com/nmr-relax</a>.</td>
+    </tr>
+
+    <tr id="GitLab" class="link_tr">
+      <td class="link_logo_td"><a href="https://gitlab.com/nmr-relax"><img src="images/gl_logo.png" alt="GitLab logo" class="image"/></a></td>
+      <td>Open source software to collaborate on code.</td>
+      <td>This is a mirror infrastructure site.  The relax project page is <a href="https://gitlab.com/nmr-relax">https://gitlab.com/nmr-relax</a>.</td>
     </tr>
 
   </tbody>
