FAQ: Updates for the SVN to git and Gna! to SourceForge migrations.

--- a/faq.html
+++ b/faq.html
@@ -44,23 +44,16 @@
   <div class="main_box">
      <h3 id="source_code">How do I obtain the newest relax source code?</h3>
 
-      <p><b>Note:  The information in this section is out of date due to the Gna! shutdown.  It will be updated once a full migration to new infrastructure has taken place.</b></p>
       <p>To obtain the most up to date copy of the relax source code without waiting for a new release, the new code can be checked out from the repository by typing:</p>
-      <p><em>$ svn co svn://svn.gna.org/svn/relax/trunk relax-trunk</em></p>
-      <p>or if this doesn't work:</p>
-      <p><em>$ svn co http://svn.gna.org/svn/relax/trunk relax-trunk</em></p>
+      <p><em>$ git clone git://git.code.sf.net/p/nmr-relax/code relax</em></p>
       <p>If you already have a checked out copy, try typing:</p>
-      <p><em>$ svn up</em></p>
-      <p>This requires installation of the <a href="http://subversion.tigris.org/">subversion program</a>.  If the fitting of the R<sub>1</sub> and R<sub>2</sub> NMR relaxation rates is required, the relaxation curve-fitting C modules will need to be compiled using <a href="http://www.scons.org/">SCons</a>.  For more information, see the compilation subsection of the <a href="download.html#Source_code_repository">relax downloads</a> page.</p>
+      <p><em>$ git pull</em></p>
+      <p>This requires installation of the <a href="https://git-scm.com/">git</a> program.  If the fitting of the R<sub>1</sub> and R<sub>2</sub> NMR relaxation rates is required, the relaxation curve-fitting C modules will need to be compiled using <a href="http://www.scons.org/">SCons</a>.  For more information, see the compilation subsection of the <a href="download.html#Source_code_repository">relax downloads</a> page.</p>
 
      <h3 id="source_code_branch">How do I check out a relax source code branch?</h3>
 
-      <p><b>Note:  The information in this section is out of date due to the Gna! shutdown.  It will be updated once a full migration to new infrastructure has taken place.</b></p>
-      <p>Sometimes code for a new analysis type or a new feature is developed within a dedicated branch within the <a href="http://svn.gna.org/viewcvs/relax/">relax repository</a>.  To obtain for example the incomplete relaxation dispersion relax branch, type:</p>
-      <p><em>$ svn co svn://svn.gna.org/svn/relax/branches/relax_disp</em></p>
-      <p>or:</p>
-      <p><em>$ svn co http://svn.gna.org/svn/relax/branches/relax_disp</em></p>
-      <p>This will create the directory <em>relax_disp</em> containing the source code of the branch.</p>
+      <p>Sometimes code for a new analysis type or a new feature is developed within a development branch within the <a href="https://sourceforge.net/p/nmr-relax/code/ci/master/tree/">relax repository</a>.  To obtain for example the incomplete wxPython-Pheonix relax branch, type:</p>
+      <p><em>$ git checkout wxPython-Phoenix/r2</em></p>
 
      <h3 id="radian_units">The equations (or units) used by relax are incorrect!</h3>
 
