Windows development: Updates for the SVN to git and Gna! to SourceForge migrations.

--- a/windows_devel.html
+++ b/windows_devel.html
@@ -57,10 +57,10 @@
      </ul></li>
     </ul></li>
 
-    <li><a href="#svn">3. Subversion</a>
+    <li><a href="#git">3. Git</a>
     <ul>
-     <li><a href="#svn_why">3.1 Why install?</a></li>
-     <li><a href="#svn_download">3.2 Download</a></li>
+     <li><a href="#git_why">3.1 Why install?</a></li>
+     <li><a href="#git_download">3.2 Download</a></li>
     </ul></li>
 
     <li><a href="#editor">4. Code editors</a>
@@ -265,28 +265,26 @@
 <!-- MSVS fin -->
 
 
-<!-- SVN -->
- <div id="svn" class="main_box">
-   <h1>3. Subversion</h1>
+<!-- Git -->
+ <div id="git" class="main_box">
+   <h1>3. Git</h1>
 
-   <p><b>Note:  The information in this section is out of date due to the Gna! shutdown.  It will be updated once a full migration to new infrastructure has taken place.</b></p>
-
-   <div id="svn_why" class="main_h2">
+   <div id="git_why" class="main_h2">
     <h2>3.1 Why install?</h2>
-     <p>The relax source code is kept within the relax Subversion <a href="http://gna.org/svn/?group=relax">repository</a>.  After installing <a href="http://subversion.apache.org/">Subversion</a>, you are then able to check out code directly from the repository.  For example to check out the code from the relax trunk, one can type:</p>
+     <p>The relax source code is kept within the <a href="https://sourceforge.net/p/nmr-relax/code/ci/master/tree/">relax git repository</a>.  After installing <a href="https://git-scm.com/">git</a>, you are then able to obtain the code directly from the repository by typing:</p>
 
-     <p><em>> svn co http://svn.gna.org/svn/relax/trunk relax-trunk</em></p>
+     <p><em>> git clone git://git.code.sf.net/p/nmr-relax/code relax</em></p>
 
    </div>
 
-   <div id="svn_download" class="main_h2">
+   <div id="git_download" class="main_h2">
     <h2>3.2 Download and installation</h2>
-      <p>The MS Windows installation files are provided by <a href="http://subversion.apache.org/packages.html#windows">numerous third parties</a> rather than being directly supplied by the subversion project.  Installation is slightly different for each package but is simple enough.  You can choose the provider as you wish, but <a href="https://sliksvn.com/download/">SlikSVN</a> is recommended as it will provide all the tools you will need and does not require registration.</p>
+      <p>The MS Windows installation files can be downloaded from <a href="https://git-scm.com/download/win">https://git-scm.com/download/win</a>.</p>
 
    </div>
 
  </div>
-<!-- SVN fin -->
+<!-- Git fin -->
 
 <!-- Editor -->
  <div id="editor" class="main_box">
