--- a/download_request.html
+++ b/download_request.html
@@ -34,11 +34,11 @@
   <div class="main_box">
     <h1>relax download request</h1>
 
-    <p>The file you have tried to access is no longer located on the Gna! servers.  It was removed from the server to conserve space on the open source infrastructure, however backups still exist.  If you would like a copy of an old distribution release and its signature file, please make a request on the <a href="communication.html#relax-users">relax users mailing list</a>.</p>
+    <p>The file you have tried to access is no longer located on the SourceForge servers.  It was removed from the server to conserve space on the open source infrastructure, however backups still exist.  If you would like a copy of an old distribution release and its signature file, please make a request on the <a href="communication.html#relax-users">relax users mailing list</a>.</p>
 
-    <p>Note that the source code for all releases can be checked out from the relax source code repository at any time.  For example to obtain the full sources for relax 1.0.0, type:</p>
+    <p>Note that the source code for all releases can be obtained from the relax source code repository at any time by typing:</p>
 
-    <p><em>> svn co http://svn.gna.org/svn/relax/tags/1.0.0</em></p>
+    <p><em>> git clone git://git.code.sf.net/p/nmr-relax/code relax</em></p>
 
   </div>
 </div>
