--- a/menu.html
+++ b/menu.html
@@ -39,7 +39,7 @@
   <div class="menu_def"><a href="https://sourceforge.net/projects/nmr-relax/files/" title="The SourceForge download site for the project relax.">Downloads</a></div>
   <div class="menu_def"><a href="https://sourceforge.net/p/nmr-relax/tickets/" title="The relax bug tracker.">Bug tracker</a></div>
   <div class="menu_def"><a href="https://sourceforge.net/p/nmr-relax/tickets-support/" title="The relax support request tracker.">Support requests</a></div>
-  <div class="menu_def"><a href=https://sourceforge.net/p/nmr-relax/tickets-tasks/"" title="The relax task tracker.">Tasks</a></div>
+  <div class="menu_def"><a href="https://sourceforge.net/p/nmr-relax/tickets-tasks/" title="The relax task tracker.">Tasks</a></div>
   <div class="menu_def"><a href="https://sourceforge.net/p/nmr-relax/code/ci/master/tree/" title="The relax git source code repository.">Source code repository</a></div>
   <div class="menu_def"><a href="https://sourceforge.net/p/nmr-relax/website/ci/master/tree/" title="The relax git http://www.nmr-relax.com website repository.">Website repository</a></div>
   <div class="menu_def"><a href="https://sourceforge.net/p/nmr-relax/relax-demo/ci/master/tree/" title="The relax git demonstration file repository.">Demo repository</a></div>
