--- a/links.html
+++ b/links.html
@@ -211,7 +211,9 @@
     <tr id="OpenHUB" class="link_tr">
       <td class="link_logo_td"><script type="text/javascript" src="https://www.openhub.net/p/633408/widgets/project_basic_stats.js"></script></td>
       <td>OpenHUB, previously known as Ohloh, is a free public directory of Free and Open Source Software and the contributors who create and maintain it.</td>
-      <td>The relax project page is <a href="https://www.openhub.net/p/nmr-relax">https://www.openhub.net/p/nmr-relax</a>.  The relax developers pages are:<br/>  <a href='https://www.openhub.net/accounts/239062?ref=Detailed' target='_top'><img alt="OpenHUB profile for Edward d'Auvergne" border='0' height='35' src='https://www.openhub.net/accounts/239062/widgets/account_detailed.gif' width='230' /></a></td>
+      <td>The relax project page is <a href="https://www.openhub.net/p/nmr-relax">https://www.openhub.net/p/nmr-relax</a>.  The relax developers pages are:
+          <br/>  <a target="_blank" href="https://www.openhub.net/accounts/true_bugman?ref=sample"><img alt='Open Hub profile for Edward d&#39;Auvergne' border='0' height='35' src='https://www.openhub.net/accounts/true_bugman/widgets/account_detailed?format=gif&amp;ref=sample' width='230'>
+      </td>
     </tr>
   </tbody>
 </table>
