--- a/menu.html
+++ b/menu.html
@@ -32,7 +32,7 @@
   <div class="menu_def"><a href="http://wiki.nmr-relax.com/" title="The relax wiki">Wiki</a></div>
 
   <div class="menu_title">relax infrastructure</div>
-  <div class="menu_def"><a href="https://sourceforge.net/projects/nmr-relax/" title="The SourceForge site for the project relax.">The relax project</a></div>
+  <div class="menu_def"><a href="https://sourceforge.net/projects/nmr-relax/" title="The SourceForge site for the project relax.">The SourceForge primary site</a></div>
   <div class="menu_def"><a href="https://github.com/nmr-relax" title="The GitHub mirror for the project relax.">The GitHub mirror</a></div>
   <div class="menu_def"><a href="https://gitlab.com/nmr-relax" title="The GitLab mirror for the project relax.">The GitLab mirror</a></div>
   <div class="menu_def"><a href="https://bitbucket.org/nmr-relax/" title="The Bitbucket mirror for the project relax.">The Bitbucket mirror</a></div>
