Revert "Converted all of the SSI includes into Jekyll {% include x.html %} statements."
This reverts commit f74c3d2d9ef5bfc39b29614f4e7b9a2d367acd55.

Removing the GitHub pages specific commits from the master branch.

--- a/communication.html
+++ b/communication.html
@@ -17,15 +17,15 @@
   <title>relax communications - the trackers and mailing lists</title>
 
   <!-- Common HTML head include -->
-  {% include head.html %}
+  <!--#include virtual="head.html" -->
 
 </head>
 
 <body>
 
 <!-- Common relax webpage header and side menu includes -->
-{% include header.html %}
-{% include menu.html %}
+<!--#include virtual="header.html" -->
+<!--#include virtual="menu.html" -->
 
 <div class="main">
 <!-- Index -->
@@ -239,7 +239,7 @@
 </div>
 
 <!-- Common relax webpage footer include -->
-{% include footer.html %}
+<!--#include virtual="footer.html" -->
 
 </body>
 </html>
