--- a/events.html
+++ b/events.html
@@ -18,7 +18,7 @@
   <title>relax events</title>
 
   <!-- Common HTML head include -->
-  {% include head.html %}
+  <!--#include virtual="head.html" -->
 <style type="text/css">
 #conf-table td {
 	padding: 10px 10px 10px 10px;
@@ -45,8 +45,8 @@
 <body>
 
 <!-- Common relax webpage header and side menu includes -->
-{% include header.html %}
-{% include menu.html %}
+<!--#include virtual="header.html" -->
+<!--#include virtual="menu.html" -->
 
 <div class="main">
   <div class="main_box">
@@ -176,7 +176,7 @@
 </div>
 
 <!-- Common relax webpage footer include -->
-{% include footer.html %}
+<!--#include virtual="footer.html" -->
 
 </body>
 </html>
