--- a/marc.html
+++ b/marc.html
@@ -18,14 +18,14 @@
   <title>relax references</title>
 
   <!-- Common HTML head include -->
-  {% include head.html %}
+  <!--#include virtual="head.html" -->
 
 </head>
 
 <body>
 
 <!-- Common relax webpage header and side menu includes -->
-{% include header.html %}
+<!--#include virtual="header.html" -->
 
 <div class="main">
  <div class="main_box">
@@ -40,7 +40,7 @@
 </div>
 
 <!-- Common relax webpage footer include -->
-{% include footer.html %}
+<!--#include virtual="footer.html" -->
 
 </body>
 </html>
