--- a/refs.html
+++ b/refs.html
@@ -18,15 +18,15 @@
   <title>relax references</title>
 
   <!-- Common HTML head include -->
-  {% include head.html %}
+  <!--#include virtual="head.html" -->
 
 </head>
 
 <body>
 
 <!-- Common relax webpage header and side menu includes -->
-{% include header.html %}
-{% include menu.html %}
+<!--#include virtual="header.html" -->
+<!--#include virtual="menu.html" -->
 
 <div class="main">
  <div class="main_box">
@@ -136,7 +136,7 @@
 </div>
 
 <!-- Common relax webpage footer include -->
-{% include footer.html %}
+<!--#include virtual="footer.html" -->
 
 </body>
 </html>
