--- a/screenshots.html
+++ b/screenshots.html
@@ -18,15 +18,15 @@
   <title>relax screenshots</title>
 
   <!-- Common HTML head include -->
-  {% include head.html %}
+  <!--#include virtual="head.html" -->
 
 </head>
 
 <body>
 
 <!-- Common relax webpage header and side menu includes -->
-{% include header.html %}
-{% include menu.html %}
+<!--#include virtual="header.html" -->
+<!--#include virtual="menu.html" -->
 
 <div class="main">
 <!-- Index -->
@@ -138,7 +138,7 @@
 </div>
 
 <!-- Common relax webpage footer include -->
-{% include footer.html %}
+<!--#include virtual="footer.html" -->
 
 </body>
 </html>
