--- a/features.html
+++ b/features.html
@@ -18,15 +18,15 @@
   <title>relax features - Model-free, RMSD, R1, R2, NOE, Consistency testing, Frame order, N-state model</title>
 
   <!-- Common HTML head include -->
-  {% include head.html %}
+  <!--#include virtual="head.html" -->
 
 </head>
 
 <body>
 
 <!-- Common relax webpage header and side menu includes -->
-{% include header.html %}
-{% include menu.html %}
+<!--#include virtual="header.html" -->
+<!--#include virtual="menu.html" -->
 
 <div class="main">
 <!-- Index -->
@@ -146,7 +146,7 @@ used as optimisation engines replacing the minimisation algorithms built into re
 </div>
 
 <!-- Common relax webpage footer include -->
-{% include footer.html %}
+<!--#include virtual="footer.html" -->
 
 </body>
 </html>
