--- a/windows_devel.html
+++ b/windows_devel.html
@@ -17,15 +17,15 @@
   <title>MS Windows development platform for relax</title>
 
   <!-- Common HTML head include -->
-  {% include head.html %}
+  <!--#include virtual="head.html" -->
 
 </head>
 
 <body>
 
 <!-- Common relax webpage header and side menu includes -->
-{% include header.html %}
-{% include menu.html %}
+<!--#include virtual="header.html" -->
+<!--#include virtual="menu.html" -->
 
 <div class="main">
  <div class="main_box">
@@ -420,7 +420,7 @@
 </div>
 
 <!-- Common relax webpage footer include -->
-{% include footer.html %}
+<!--#include virtual="footer.html" -->
 
 </body>
 </html>
