Updated the http://www.nmr-relax.com/download.html webpage for the relax 4.1.0 release.

--- a/download.html
+++ b/download.html
@@ -47,6 +47,7 @@
     <li><a href="download.html#New_releases">New releases</a></li>
     <li><a href="download.html#All_releases">All releases</a>
      <ul>
+      <li><a href="download.html#series_4.1">4.1 series</a></li>
       <li><a href="download.html#series_4.0">4.0 series</a></li>
       <li><a href="download.html#series_3.3">3.3 series</a></li>
       <li><a href="download.html#series_3.2">3.2 series</a></li>
@@ -67,7 +68,7 @@
   <div id="Current_release" class="main_box">
     <h1>Current release</h1>
 
-    <p>The current stable release is <a href="http://wiki.nmr-relax.com/Relax_4.0.3">relax version 4.0.3</a> <em>(28 October 2016)</em>.</p>
+    <p>The current stable release is <a href="http://wiki.nmr-relax.com/Relax_4.1.0">relax version 4.1.0</a> <em>(14 February 2019)</em>.</p>
 
       <p>relax binaries have been pre-compiled for a number of computer architectures.  These are based on Python 2.7 but usually work with other Python versions.  If not, or if binaries for your system do not exist, please download the source release (note that the compilation of binary modules is not a prerequisite for using relax).  If the binary distribution file for your architecture does not correspond to the most up to date version of relax, please download the up-to-date source release instead.  If you would like to contribute binary packages for your specific architecture, please read the <a href="manual/Open_source_infrastructure.html">Open source infrastructure</a> chapter of the relax manual for details.</p>
 
@@ -151,16 +152,16 @@
       <td class="software_td_head3"><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.0.3/relax-4.0.3.GNU-Linux.i686.tar.bz2" title="relax">relax-4.0.3.GNU-Linux.i686.tar.bz2</a></td>
-      <td><tt><small>dd9acb0fa02b0a66636e6aabcdd23a93</small></tt></td>
-      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.0.3/relax-4.0.3.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td align="right">106,031,475</td>
+      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.1.0/relax-4.1.0.GNU-Linux.i686.tar.bz2" title="relax">relax-4.1.0.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>e8c44f5f463bb846ae4b1b64ff9a63af</small></tt></td>
+      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.1.0/relax-4.1.0.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">106,706,095</td>
     </tr>
     <tr>
-      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.0.3/relax-4.0.3.GNU-Linux.x86_64.tar.bz2" title="relax">relax-4.0.3.GNU-Linux.x86_64.tar.bz2</a></td>
-      <td><tt><small>645a11779efd345ee4d7ec0abf6eb671</small></tt></td>
-      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.0.3/relax-4.0.3.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td align="right">106,143,914</td>
+      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.1.0/relax-4.1.0.GNU-Linux.x86_64.tar.bz2" title="relax">relax-4.1.0.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>76c206abd68b11977841ca7f067d7215</small></tt></td>
+      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.1.0/relax-4.1.0.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">106,759,193</td>
     </tr>
   </tbody>
 </table>
@@ -192,10 +193,10 @@
       <td class="software_td_head3"><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.0.3/relax-4.0.3.Win32.zip" title="relax">relax-4.0.3.Win32.zip</a></td>
-      <td><tt><small>c73b51f5567ca3f1ff97bf013eca37a1</small></tt></td>
-      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.0.3/relax-4.0.3.Win32.zip.sig" title="relax GPG signature">signature</a></td>
-      <td align="right">112,114,491</td>
+      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.1.0/relax-4.1.0.Win32.zip" title="relax">relax-4.1.0.Win32.zip</a></td>
+      <td><tt><small>67ad86833e1ccd4a96dcd61bb47ee023</small></tt></td>
+      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.1.0/relax-4.1.0.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">102,203,392</td>
     </tr>
   </tbody>
 </table>
@@ -225,10 +226,10 @@
       <td class="software_td_head3"><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.0.3/relax-4.0.3.Darwin.dmg" title="relax">relax-4.0.3.Darwin.dmg</a></td>
-      <td><tt><small>3886fe2e58dc47df57059f95890b550f</small></tt></td>
-      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.0.3/relax-4.0.3.Darwin.dmg.sig" title="relax GPG signature">signature</a></td>
-      <td align="right">332,562,202</td>
+      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.1.0/relax-4.1.0.Darwin.dmg" title="relax">relax-4.1.0.Darwin.dmg</a></td>
+      <td><tt><small>1ba0f2fa6234071957c4592c12137d33</small></tt></td>
+      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.1.0/relax-4.1.0.Darwin.dmg.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">336,091,101</td>
     </tr>
   </tbody>
 </table>
@@ -289,16 +290,16 @@
       <td class="software_td_head3"><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.0.3/relax-4.0.3.src.tar.bz2" title="relax">relax-4.0.3.src.tar.bz2</a></td>
-      <td><tt><small>a374e32343a53f8e5412091b595c01d4</small></tt></td>
-      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.0.3/relax-4.0.3.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td align="right">106,113,932</td>
+      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.1.0/relax-4.1.0.src.tar.bz2" title="relax">relax-4.1.0.src.tar.bz2</a></td>
+      <td><tt><small>05fa88e07bb0d1db79e54435007f3789</small></tt></td>
+      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.1.0/relax-4.1.0.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">106,716,850</td>
     </tr>
     <tr>
-      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.0.3/relax-4.0.3.src.zip" title="relax">relax-4.0.3.src.zip</a></td>
-      <td><tt><small>e970417032b4b8ef70a8d0c812d0879f</small></tt></td>
-      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.0.3/relax-4.0.3.src.zip.sig" title="relax GPG signature">signature</a></td>
-      <td align="right">112,228,034</td>
+      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.1.0/relax-4.1.0.src.zip" title="relax">relax-4.1.0.src.zip</a></td>
+      <td><tt><small>57969babe0b849c24b9c7d182e9918c4</small></tt></td>
+      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.1.0/relax-4.1.0.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">113,525,980</td>
     </tr>
   </tbody>
 </table>
@@ -365,6 +366,62 @@
 
     <p>Descriptions of these releases are available from the <a href='https://gna.org/news/?group=relax'>relax news pages</a>.  These files can either be found on the <a href="https://sourceforge.net/projects/nmr-relax/files/">relax download site</a> or are <a href="https://sourceforge.net/projects/nmr-relax/files/4.0.1/">available upon request</a>.</p>
 
+
+    <div id="series_4.1" class="main_h2">
+      <h2>The 4.1 series</h2>
+
+<table class="software_table">
+  <tbody>
+    <tr>
+      <td class="software_td_head1"><strong>Distribution package</strong></td>
+      <td class="software_td_head2"><strong>MD5 checksum</strong></td>
+      <td class="software_td_head3"><strong>GPG signature</strong></td>
+      <td class="software_td_head3"><strong>File size (bytes)</strong></td>
+    </tr>
+
+    <tr><td><em><a href="http://wiki.nmr-relax.com/Relax_4.1.0">Version 4.1.0</a> (2019-02-14)</em></td></tr>
+    <tr>
+      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.1.0/relax-4.1.0.GNU-Linux.i686.tar.bz2" title="relax">relax-4.1.0.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>e8c44f5f463bb846ae4b1b64ff9a63af</small></tt></td>
+      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.1.0/relax-4.1.0.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">106,706,095</td>
+    </tr>
+    <tr>
+      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.1.0/relax-4.1.0.GNU-Linux.x86_64.tar.bz2" title="relax">relax-4.1.0.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>76c206abd68b11977841ca7f067d7215</small></tt></td>
+      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.1.0/relax-4.1.0.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">106,759,193</td>
+    </tr>
+    <tr>
+      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.1.0/relax-4.1.0.Win32.zip" title="relax">relax-4.1.0.Win32.zip</a></td>
+      <td><tt><small>67ad86833e1ccd4a96dcd61bb47ee023</small></tt></td>
+      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.1.0/relax-4.1.0.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">102,203,392</td>
+    </tr>
+    <tr>
+      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.1.0/relax-4.1.0.Darwin.dmg" title="relax">relax-4.1.0.Darwin.dmg</a></td>
+      <td><tt><small>1ba0f2fa6234071957c4592c12137d33</small></tt></td>
+      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.1.0/relax-4.1.0.Darwin.dmg.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">336,091,101</td>
+    </tr>
+    <tr>
+      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.1.0/relax-4.1.0.src.tar.bz2" title="relax">relax-4.1.0.src.tar.bz2</a></td>
+      <td><tt><small>05fa88e07bb0d1db79e54435007f3789</small></tt></td>
+      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.1.0/relax-4.1.0.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">106,716,850</td>
+    </tr>
+    <tr>
+      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.1.0/relax-4.1.0.src.zip" title="relax">relax-4.1.0.src.zip</a></td>
+      <td><tt><small>57969babe0b849c24b9c7d182e9918c4</small></tt></td>
+      <td><a href="https://sourceforge.net/projects/nmr-relax/files/4.1.0/relax-4.1.0.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">113,525,980</td>
+    </tr>
+
+  </tbody>
+
+</table>
+
+    </div>
 
     <div id="series_4.0" class="main_h2">
       <h2>The 4.0 series</h2>
