Added the missing relax-5.0.0.GNU-Linux.x86_64.tar.bz2 md5sum to the download page.

--- a/download.html
+++ b/download.html
@@ -160,7 +160,7 @@
     </tr>
     <tr>
       <td><a href="https://sourceforge.net/projects/nmr-relax/files/5.0.0/relax-5.0.0.GNU-Linux.x86_64.tar.bz2" title="relax">relax-5.0.0.GNU-Linux.x86_64.tar.bz2</a></td>
-      <td><tt><small></small></tt></td>
+      <td><tt><small>c8f8516fbe826a6f7fa5b09d76c9694c</small></tt></td>
       <td><a href="https://sourceforge.net/projects/nmr-relax/files/5.0.0/relax-5.0.0.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
       <td align="right">106,800,456</td>
     </tr>
@@ -389,7 +389,7 @@
     </tr>
     <tr>
       <td><a href="https://sourceforge.net/projects/nmr-relax/files/5.0.0/relax-5.0.0.GNU-Linux.x86_64.tar.bz2" title="relax">relax-5.0.0.GNU-Linux.x86_64.tar.bz2</a></td>
-      <td><tt><small></small></tt></td>
+      <td><tt><small>c8f8516fbe826a6f7fa5b09d76c9694c</small></tt></td>
       <td><a href="https://sourceforge.net/projects/nmr-relax/files/5.0.0/relax-5.0.0.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
       <td align="right">106,800,456</td>
     </tr>
