Added the Nanjing 2021 talk to the list of events.
ODP and PPTX versions of the presentation have been included.

--- a/events.html
+++ b/events.html
@@ -56,6 +56,35 @@
     <p>Here is a list of events where relax was presented.</p>
 
   <div class="main_h2">
+    <h2>Talks</h2>
+
+    <table class="conf-table">
+      <tbody>
+        <tr>
+          <td class="conf-table-icon"><a href="http://www.nmr-conference.com"><img src="images/nanjing2021/gy_bg_icon.png" alt="International NMR symposium and workshop in drug discovery" class="image"/></a></td>
+          <td>
+            <table class="conf-subtable">
+              <tbody>
+                <tr><td colspan="2"><strong>International NMR symposium and workshop in drug discovery 2021</strong></td></tr>
+                <tr><td class="conf-table-title">Conference:</td><td>International NMR symposium and workshop in drug discovery.</td></tr>
+                <tr><td class="conf-table-title">Location:</td><td>Nanjing, China.</td></tr>
+                <tr><td class="conf-table-title">Date:</td><td>May 20-23, 2021.</td></tr>
+                <tr><td class="conf-table-title">Title:</td><td>relax - NMR analysis software for molecular dynamics.</td></tr>
+                <tr><td class="conf-table-title">Authors:</td><td>Edward d'Auvergne.</td></tr>
+                <tr><td class="conf-table-title">Presentation:</td><td><a href="conferences/edward_nanjing_2021.odp">ODP</a></td></tr>
+                <tr><td class="conf-table-title">Presentation:</td><td><a href="conferences/edward_nanjing_2021.pptx">PPTX</a></td></tr>
+                <tr><td class="conf-table-title">Conference website:</td><td><a href="http://www.nmr-conference.com">NMR国际论坛暨新技术研讨会</a> (<a href=https://web.archive.org/web/20210522184106/http://www.nmr-conference.com/#>Internet Archive snapshot</a>).</td></tr>
+              </tbody>
+            </table>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+
+
+  </div>
+
+  <div class="main_h2">
     <h2>Posters</h2>
 
     <table class="conf-table">
