--- a/head.html
+++ b/head.html
@@ -39,5 +39,19 @@
 
   </script>
 
+  <!-- Mobile menu JS -->
+  <script type="text/javascript">
+    function toggleMobileMenu() {
+      var menu = document.getElementById("menu_elements");
+      if (menu.style.display == "block") {
+        menu.style.display = "none";
+      } else {
+        menu.style.display = "block";
+      }
+    }
+  </script>
+
+  <!-- Icon for the mobile menu -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- End SSI head element -->
