--- a/menu.html
+++ b/menu.html
@@ -1,50 +1,60 @@
 <!-- SSI side menu -->
 <div class="menu">
   <div class="menu_header">The relax menu</div>
-  <div class="menu_title">relax</div>
-  <div class="menu_def"><a href="/" title="Go to the relax home page">Main page</a></div>
-  <div class="menu_def"><a href="/features.html" title="A listing of relax's features">Features</a></div>
-  <div class="menu_def_collapsable" onclick="collapseMenu('analysis_submenu')">Supported analyses</div>
-    <div id="analysis_submenu" class="submenu">
-      <a class="submenu_def" href="/analyses/relaxation_dispersion.html">Relaxation dispersion</a>
-    </div>
-  <div class="menu_def"><a href="/screenshots.html" title="relax UI screenshots">Screenshots</a></div>
-  <div class="menu_def"><a href="/docs.html" title="The internal help system, sample scripts, and the relax manual">Documentation</a></div>
-  <div class="menu_def_collapsable" onclick="collapseMenu('manual_submenu')">User manual</div>
-    <div id="manual_submenu" class="submenu">
-       <a class="submenu_def" href="https://sourceforge.net/projects/nmr-relax/files/manual/relax.pdf/download" title="The relax PDF user manual">PDF user manual</a>
-       <a class="submenu_def" href="/manual/index.html" title="The relax HTML user manual (lower quality than the PDF)">HTML user manual</a>
-    </div>
-  <div class="menu_def"><a href="/download.html" title="Instructions for downloading relax">Download</a></div>
-  <div class="menu_def"><a href="/communication.html" title="The bug tracker and mailing lists">Mailing lists &amp; trackers</a></div>
-  <div class="menu_def"><a href="/api/" title="The relax internals for power users">The relax API documentation</a></div>
-  <div class="menu_def"><a href="/faq.html" title="Frequently asked questions (FAQ)">FAQ</a></div>
-  <div class="menu_def_collapsable" onclick="collapseMenu('devel_submenu')">Development platform setup</div>
-    <div id="devel_submenu" class="submenu">
-      <a class="submenu_def" href="/devel_platform.html">Overview</a>
-      <a class="submenu_def" href="/windows_devel.html">MS Windows</a>
-    </div>
 
-  <div class="menu_def"><a href="/events.html" title="The material related to events publicizing relax">Events</a></div>
-  <div class="menu_def"><a href="/refs.html" title="References for the program relax">References</a></div>
-  <div class="menu_def"><a href="/links.html" title="Where to find relax on the web, and other links">Links</a></div>
-  <div class="menu_def"><a href="/search.html" title="Search">Search</a></div>
-  <div class="menu_def"><a href="http://wiki.nmr-relax.com/" title="The relax wiki">Wiki</a></div>
+  <!-- Mobile menu -->
+  <div class="mobile_relax_icon"><a href="/" type="image/png"><img src="/images/relax_logo_16.png"/></a></div>
 
-  <div class="menu_title">relax infrastructure</div>
-  <div class="menu_def"><a href="https://sourceforge.net/projects/nmr-relax/" title="The SourceForge site for the project relax.">The SourceForge primary site</a></div>
-  <div class="menu_def"><a href="https://github.com/nmr-relax" title="The GitHub mirror for the project relax.">The GitHub mirror</a></div>
-  <div class="menu_def"><a href="https://gitlab.com/nmr-relax" title="The GitLab mirror for the project relax.">The GitLab mirror</a></div>
-  <div class="menu_def"><a href="https://bitbucket.org/nmr-relax/" title="The Bitbucket mirror for the project relax.">The Bitbucket mirror</a></div>
-  <div class="menu_def"><a href="https://sourceforge.net/projects/nmr-relax/files/" title="The SourceForge download site for the project relax.">Downloads</a></div>
-  <div class="menu_def"><a href="https://sourceforge.net/p/nmr-relax/mailman/" title="The relax mailing lists.">Mailing lists</a></div>
-  <div class="menu_def"><a href="https://sourceforge.net/p/nmr-relax/tickets/" title="The relax bug tracker.">Bug tracker</a></div>
-  <div class="menu_def"><a href="https://sourceforge.net/p/nmr-relax/tickets-support/" title="The relax support request tracker.">Support requests</a></div>
-  <div class="menu_def"><a href="https://sourceforge.net/p/nmr-relax/tickets-tasks/" title="The relax task tracker.">Tasks</a></div>
-  <div class="menu_def"><a href="https://sourceforge.net/p/nmr-relax/code/ci/master/tree/" title="The relax git source code repository.">Source code repository</a></div>
-  <div class="menu_def"><a href="https://sourceforge.net/p/nmr-relax/website/ci/master/tree/" title="The relax git http://www.nmr-relax.com website repository.">Website repository</a></div>
-  <div class="menu_def"><a href="https://sourceforge.net/p/nmr-relax/relax-demo/ci/master/tree/" title="The relax git demonstration file repository.">Demo repository</a></div>
-  <div class="menu_def"><a href="https://sourceforge.net" title="The SourceForge website.">SourceForge</a></div>
+  <div id="menu_elements">
+    <div class="menu_title">relax</div>
+    <div class="menu_def"><a href="/" title="Go to the relax home page">Main page</a></div>
+    <div class="menu_def"><a href="/features.html" title="A listing of relax's features">Features</a></div>
+    <div class="menu_def_collapsable" onclick="collapseMenu('analysis_submenu')">Supported analyses</div>
+      <div id="analysis_submenu" class="submenu">
+        <a class="submenu_def" href="/analyses/relaxation_dispersion.html">Relaxation dispersion</a>
+      </div>
+    <div class="menu_def"><a href="/screenshots.html" title="relax UI screenshots">Screenshots</a></div>
+    <div class="menu_def"><a href="/docs.html" title="The internal help system, sample scripts, and the relax manual">Documentation</a></div>
+    <div class="menu_def_collapsable" onclick="collapseMenu('manual_submenu')">User manual</div>
+      <div id="manual_submenu" class="submenu">
+         <a class="submenu_def" href="https://sourceforge.net/projects/nmr-relax/files/manual/relax.pdf/download" title="The relax PDF user manual">PDF user manual</a>
+         <a class="submenu_def" href="/manual/index.html" title="The relax HTML user manual (lower quality than the PDF)">HTML user manual</a>
+      </div>
+    <div class="menu_def"><a href="/download.html" title="Instructions for downloading relax">Download</a></div>
+    <div class="menu_def"><a href="/communication.html" title="The bug tracker and mailing lists">Mailing lists &amp; trackers</a></div>
+    <div class="menu_def"><a href="/api/" title="The relax internals for power users">The relax API documentation</a></div>
+    <div class="menu_def"><a href="/faq.html" title="Frequently asked questions (FAQ)">FAQ</a></div>
+    <div class="menu_def_collapsable" onclick="collapseMenu('devel_submenu')">Development platform setup</div>
+      <div id="devel_submenu" class="submenu">
+        <a class="submenu_def" href="/devel_platform.html">Overview</a>
+        <a class="submenu_def" href="/windows_devel.html">MS Windows</a>
+      </div>
 
+    <div class="menu_def"><a href="/events.html" title="The material related to events publicizing relax">Events</a></div>
+    <div class="menu_def"><a href="/refs.html" title="References for the program relax">References</a></div>
+    <div class="menu_def"><a href="/links.html" title="Where to find relax on the web, and other links">Links</a></div>
+    <div class="menu_def"><a href="/search.html" title="Search">Search</a></div>
+    <div class="menu_def"><a href="http://wiki.nmr-relax.com/" title="The relax wiki">Wiki</a></div>
+
+    <div class="menu_title">relax infrastructure</div>
+    <div class="menu_def"><a href="https://sourceforge.net/projects/nmr-relax/" title="The SourceForge site for the project relax.">The SourceForge primary site</a></div>
+    <div class="menu_def"><a href="https://github.com/nmr-relax" title="The GitHub mirror for the project relax.">The GitHub mirror</a></div>
+    <div class="menu_def"><a href="https://gitlab.com/nmr-relax" title="The GitLab mirror for the project relax.">The GitLab mirror</a></div>
+    <div class="menu_def"><a href="https://bitbucket.org/nmr-relax/" title="The Bitbucket mirror for the project relax.">The Bitbucket mirror</a></div>
+    <div class="menu_def"><a href="https://sourceforge.net/projects/nmr-relax/files/" title="The SourceForge download site for the project relax.">Downloads</a></div>
+    <div class="menu_def"><a href="https://sourceforge.net/p/nmr-relax/mailman/" title="The relax mailing lists.">Mailing lists</a></div>
+    <div class="menu_def"><a href="https://sourceforge.net/p/nmr-relax/tickets/" title="The relax bug tracker.">Bug tracker</a></div>
+    <div class="menu_def"><a href="https://sourceforge.net/p/nmr-relax/tickets-support/" title="The relax support request tracker.">Support requests</a></div>
+    <div class="menu_def"><a href="https://sourceforge.net/p/nmr-relax/tickets-tasks/" title="The relax task tracker.">Tasks</a></div>
+    <div class="menu_def"><a href="https://sourceforge.net/p/nmr-relax/code/ci/master/tree/" title="The relax git source code repository.">Source code repository</a></div>
+    <div class="menu_def"><a href="https://sourceforge.net/p/nmr-relax/website/ci/master/tree/" title="The relax git http://www.nmr-relax.com website repository.">Website repository</a></div>
+    <div class="menu_def"><a href="https://sourceforge.net/p/nmr-relax/relax-demo/ci/master/tree/" title="The relax git demonstration file repository.">Demo repository</a></div>
+    <div class="menu_def"><a href="https://sourceforge.net" title="The SourceForge website.">SourceForge</a></div>
+  </div>
+
+  <!-- Mobile menu toggle -->
+  <a href="javascript:void(0);" class="icon" onclick="toggleMobileMenu()">
+    <i class="fa fa-bars"></i>
+  </a>
 </div>
 <!-- End SSI side menu -->
