--- a/events.html
+++ b/events.html
@@ -58,10 +58,10 @@
   <div class="main_h2">
     <h2>Talks</h2>
 
+    <div class="conf-table-icon"><a href="http://www.nmr-conference.com"><img src="images/nanjing2021/gy_bg_icon.png" alt="International NMR symposium and workshop in drug discovery" class="image"/></a></div>
     <table class="conf-table">
       <tbody>
         <tr>
-          <td class="conf-table-icon"><a href="http://www.nmr-conference.com"><img src="images/nanjing2021/gy_bg_icon.png" alt="International NMR symposium and workshop in drug discovery" class="image"/></a></td>
           <td>
             <table class="conf-subtable">
               <tbody>
@@ -87,10 +87,10 @@
   <div class="main_h2">
     <h2>Posters</h2>
 
+    <div class="conf-table-icon"><img src="images/icmrbs2012/icmrbs2012.png" alt="ICMRBS 2012" class="image"/></div>
     <table class="conf-table">
       <tbody>
         <tr>
-          <td class="conf-table-icon"><img src="images/icmrbs2012/icmrbs2012.png" alt="ICMRBS 2012" class="image"/></td>
           <td>
             <table class="conf-subtable">
               <tbody>
@@ -108,10 +108,10 @@
       </tbody>
     </table>
 
+    <div class="conf-table-icon"><a href="http://www.mootnmr.org/"><img src="images/MOOT_logo_mini.png" alt="22nd MOOT" class="image"/></a></div>
     <table class="conf-table">
       <tbody>
         <tr>
-          <td class="conf-table-icon"><a href="http://www.mootnmr.org/"><img src="images/MOOT_logo_mini.png" alt="22nd MOOT" class="image"/></a></td>
           <td>
             <table class="conf-subtable">
               <tbody>
@@ -128,10 +128,10 @@
       </tbody>
     </table>
 
+    <div class="conf-table-icon"><a href="https://web.archive.org/web/20090707094851/http://www.enc-conference.org/"><img src="images/50thENC.jpg" alt="ENC 2009" class="image"/></a></div>
     <table class="conf-table">
       <tbody>
         <tr>
-          <td class="conf-table-icon"><a href="https://web.archive.org/web/20090707094851/http://www.enc-conference.org/"><img src="images/50thENC.jpg" alt="ENC 2009" class="image"/></a></td>
           <td>
             <table class="conf-subtable">
               <tbody>
@@ -150,10 +150,10 @@
       </tbody>
     </table>
 
+    <div class="conf-table-icon"><a href="https://web.archive.org/web/20070819173238/http://www.icmrbs2006.org/"><img src="images/icmrbs2006/silouette_mini.png" alt="ICMRBS 2006" class="image"/></a></div>
     <table class="conf-table">
       <tbody>
         <tr>
-          <td class="conf-table-icon"><a href="https://web.archive.org/web/20070819173238/http://www.icmrbs2006.org/"><img src="images/icmrbs2006/silouette_mini.png" alt="ICMRBS 2006" class="image"/></a></td>
           <td>
             <table class="conf-subtable">
               <tbody>
@@ -171,10 +171,10 @@
       </tbody>
     </table>
 
+    <div class="conf-table-icon"><a href="https://web.archive.org/web/20040616085155/http://www.anzmag2004.com:80/"><img src="images/anzmag_2004/barossa_mini.png" alt="ANZMAG 2004" class="image"/></a></div>
     <table class="conf-table">
       <tbody>
         <tr>
-          <td class="conf-table-icon"><a href="https://web.archive.org/web/20040616085155/http://www.anzmag2004.com:80/"><img src="images/anzmag_2004/barossa_mini.png" alt="ANZMAG 2004" class="image"/></a></td>
           <td>
             <table class="conf-subtable">
               <tbody>
