--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,15 @@
   <div class="menu_header">The relax menu</div>
 
   <!-- Mobile menu -->
-  <div class="mobile_relax_icon"><a href="/" type="image/png"><img src="/images/relax_logo_16.png"/></a></div>
+  <div class="menu_mobile_header">
+    <!-- relax icon -->
+    <a href="/" type="image/png"><img src="/images/relax_logo_32.png"/></a>
+
+    <!-- Mobile menu toggle -->
+    <a href="javascript:void(0);" class="icon" onclick="toggleMobileMenu()">
+      <i class="fa fa-bars"></i>
+    </a>
+  </div>
 
   <div id="menu_elements">
     <div class="menu_title">relax</div>
@@ -52,9 +60,5 @@
     <div class="menu_def"><a href="https://sourceforge.net" title="The SourceForge website.">SourceForge</a></div>
   </div>
 
-  <!-- Mobile menu toggle -->
-  <a href="javascript:void(0);" class="icon" onclick="toggleMobileMenu()">
-    <i class="fa fa-bars"></i>
-  </a>
 </div>
 <!-- End SSI side menu -->
