Mobile: Switch to a smaller relax logo for tablets in portrait mode.
The original logo is far too big.

--- a/header.html
+++ b/header.html
@@ -3,6 +3,10 @@
   <a href="/" name="relax" type="image/png"><img src="/relax_logo.png" alt="relax: dynamics analysis, model-free analysis, relaxation data, R1 and R2 exponential curve-fitting, steady-state NOE calculation, reduced spectral density mapping, relaxation dispersion, N-state model, frame order dynamics theories, stereochemistry, conformational analysis, organic molecules, proteins, RNA, DNA, sugars, and other biomolecules." width="200" height="84" class="image"/></a>
 </div>
 
+<div class="header_image_small">
+  <a href="/" name="relax" type="image/png"><img src="images/relax_logo_32.png" width="80" height="32" class="image"/></a>
+</div>
+
 <div class="header">
   <p id="headline"><strong>relax</strong> - Molecular dynamics by NMR data analysis</p>
   <p id="tagline">Analysis software for: Model-free, NMR relaxation (R<sub>1</sub>, R<sub>2</sub>, NOE), reduced spectral density mapping, relaxation dispersion, N-state models, frame order theory.</p>
