--- a/menu.html
+++ b/menu.html
@@ -15,7 +15,7 @@
 
   <div id="menu_elements">
     <div class="menu_title">relax</div>
-    <div class="menu_def"><a href="/" title="Go to the relax home page">Main page</a></div>
+    <div class="menu_def"><a href="/" title="Go to the relax home page">Home</a></div>
     <div class="menu_def"><a href="/features.html" title="A listing of relax's features">Features</a></div>
     <div class="menu_def_collapsable" onclick="collapseMenu('analysis_submenu')">Supported analyses</div>
       <div id="analysis_submenu" class="submenu">
